# hackclub

./: .gitignore  .prettierignore  .~lock.Timeline.ods#  ACTIVITIES.md  CC_BY-SA_LICENSE  CODE_OF_CONDUCT.md  CONDUCT.md  CONTRIBUTING.md  GOALS.md  GUIDELINES.md  LICENSE  MIT_LICENSE  README.md  Read.md  SCHEDULE.md  SLACK.md  TERMS_AND_PRIVACY.txt  TRANSPARENCY  Timeline.ods  about.md  blurbs.md  canvasdrwaing.html  circle.yml  club_case_studies.md  club_fair.md  club_leader_onboarding_protocol  club_leader_onboarding_protocol.md  club_meeting.md  contributing.html  css_style_guide.md  energizers.md  english_style_guide.md  event_protocol.md  first_meeting.md  getting_started.md  github_teams.md  hiring_protocol.md  how_to_run_a_club.md  internships.md  issues.md  (+20 more)
.circleci/: config.yml
.github/: pull_request_template.md
.history/: README_20200901205254.md
Show Your Projects/: README.md
applications/: echoing_green_14.md  fast_forward_s16  fast_forward_s16.md  thiel_fellowship_14.md  yc_s15.md  yc_s16.md  yc_w15.md  yc_w16.md
archive/: club_case_studies.md  old_readme.md
archived/: club_meeting.md
blog_posts/: 11-19-14-talking-to-organizers.md  12-01-14-learning-about-values-of-organizers.md  12-08-14-who-is-our-customer.md
brainstorming/: dec-16-brainstorming.md
case_studies/: README.md
club_in_a_box/: how_to_run_a_club.md
clubs/: FAQ.md  README.md  berkeley_high_constitution.md  berkeley_high_plan.md  club-proposal-template.md  (+4 more)
workshops/discord_bot_with_rust/code/: .env  Cargo.toml
workshops/discord_bot_with_rust/code/src/: main.rs
(+1500 files in other folders)
